--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,14 @@
     <string name="tab_text_3">Tab 3</string>
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
+
+    <array name="genres">
+        <item>Writing</item>
+        <item>Translation and Languages</item>
+        <item>Data Entry</item>
+        <item>Website and Software</item>
+        <item>Design and Media</item>
+        <item>Engineering and Science</item>
+
+    </array>
 </resources>
